// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Whale />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/brag path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Whale
        pose="brag"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/confess path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Whale
        pose="confess"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;
